--- a/book.html
+++ b/book.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>College Wishlist💖</title>
+    <title>Small Gift</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="motive">
       <h2>
-        I write this Beautiful Book for You . <br />
-        You Help me In Every Situation without judging me.
+        I write this Beautiful Book for You. <br />
+        You Help me In Every Situation, <br /> without judging me.
         <br />
         <span> Thankyou For Everything💖.</span>
       </h2>
